--- a/index.html
+++ b/index.html
@@ -174,6 +174,81 @@
     </div>
 </section>
 
+    <!-- Service Highlights Section -->
+    <section class="section" style="background:var(--color-gray-light);color:var(--color-black);padding:5rem 0 4rem 0;">
+      <div class="container" style="max-width:1100px;">
+        <h2 style="text-align:center;margin-bottom:2.2rem;">Our Installation Services</h2>
+        <div class="services-grid" style="gap:2.5rem;">
+          <div class="service-card" style="background:#fff;color:#222;">
+            <h3>School Furniture Installation</h3>
+            <p>Expert assembly and installation of desks, chairs, tables, lab furniture, and more for K-12 and higher education environments.</p>
+          </div>
+          <div class="service-card" style="background:#fff;color:#222;">
+            <h3>FF&E Solutions</h3>
+            <p>Comprehensive FF&E (Furniture, Fixtures & Equipment) installation for schools, offices, and commercial spaces, ensuring every detail is handled.</p>
+          </div>
+          <div class="service-card" style="background:#fff;color:#222;">
+            <h3>Project Management</h3>
+            <p>From delivery coordination to punch list completion, we manage every step for a seamless, on-time project.</p>
+          </div>
+          <div class="service-card" style="background:#fff;color:#222;">
+            <h3>Statewide Coverage</h3>
+            <p>Serving Dallas, Houston, Austin, San Antonio, and West Texas with a dedicated, uniformed team.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Trust Signals Section -->
+    <section class="section" style="background:var(--color-gray-dark);padding:4rem 0 3rem 0;">
+      <div class="container" style="max-width:900px;text-align:center;">
+        <h2 style="margin-bottom:1.5rem;">Why Choose Elite Install?</h2>
+        <ul style="display:grid;grid-template-columns:1fr 1fr;gap:2rem;list-style:none;padding:0;margin:0 auto 2.5rem auto;max-width:700px;">
+          <li style="text-align:left;">✔ Fully insured and certified installation team</li>
+          <li style="text-align:left;">✔ 24-hour response time guarantee</li>
+          <li style="text-align:left;">✔ No temporary labor—only full-time professionals</li>
+          <li style="text-align:left;">✔ Detailed project documentation and communication</li>
+          <li style="text-align:left;">✔ Trusted by Texas school furniture dealers</li>
+          <li style="text-align:left;">✔ Flexible scheduling for summer and off-hours</li>
+        </ul>
+        <a href="contact.html" class="btn btn-primary" style="min-width:220px;">Get a Free Consultation</a>
+      </div>
+    </section>
+
+    <!-- FAQ Section (visible, not just schema) -->
+    <section class="section" style="background:var(--color-gray-light);color:var(--color-black);padding:4rem 0 3rem 0;">
+      <div class="container" style="max-width:900px;">
+        <h2 style="text-align:center;margin-bottom:2rem;">Frequently Asked Questions</h2>
+        <div class="faq-list" style="display:grid;gap:2rem;">
+          <div>
+            <h3 style="margin-bottom:0.5rem;">What areas do you serve?</h3>
+            <p>We serve Dallas, Houston, Austin, San Antonio, and West Texas.</p>
+          </div>
+          <div>
+            <h3 style="margin-bottom:0.5rem;">Are you insured and certified?</h3>
+            <p>Yes, our team is fully insured and certified for professional installations.</p>
+          </div>
+          <div>
+            <h3 style="margin-bottom:0.5rem;">Do you offer project management?</h3>
+            <p>Absolutely. We handle delivery, scheduling, installation, and punch lists for a seamless experience.</p>
+          </div>
+          <div>
+            <h3 style="margin-bottom:0.5rem;">How do I get a quote?</h3>
+            <p>Click any “Request a Quote” button or visit our Contact page to get started.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Call to Action Section (bottom) -->
+    <section class="section cta-section anim-fade-in-up" style="background:var(--color-black);padding:4rem 0 3rem 0;">
+      <div class="container" style="max-width:700px;text-align:center;">
+        <h2 style="margin-bottom:1.2rem;">Ready to Elevate Your Next Project?</h2>
+        <p style="margin-bottom:2.2rem;">Let’s discuss how Elite Install can deliver a flawless installation for your school or business. Our team is ready to help you succeed.</p>
+        <a href="contact.html" class="btn btn-primary" style="min-width:220px;">Request a Free Quote</a>
+      </div>
+    </section>
+
         <section class="section section-accented principles-section">
             <div class="container" style="max-width:1200px;">
                 <div class="section-header anim-fade-in-up" style="margin-bottom:3.5rem;">
