Refactor hero headline for improved readability and styling consistency

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <div class="hero-overlay" aria-hidden="true"></div>
     <div id="hero-canvas-container" style="z-index:1;position:absolute;top:0;left:0;right:0;bottom:0;pointer-events:none;"></div>
     <div class="container hero-content" style="padding-top:6rem;padding-bottom:6rem;max-width:700px;position:relative;z-index:2;">
-        <h1 class="hero-headline-deconstruct prevent-break" style="margin-bottom:1.2rem;">Your Reputation, <span style="white-space:nowrap;">Installed.</span></h1>
+        <h1 class="hero-headline-deconstruct" style="margin-bottom:1.2rem;"><span style="white-space:nowrap;">Your</span> <span style="white-space:nowrap;">Reputation,</span> <span style="white-space:nowrap;">Installed.</span></h1>
         <p class="subtitle anim-fade-in-up" data-delay="100" style="margin-bottom:2.2rem;color:#fff;font-size:1.3rem;max-width:40rem;">Your trusted partner for school furniture installation in Texas. We provide certified, insured, and professional installation services that protect your brand and ensure project success for your clients.</p>
         <div class="cta-buttons anim-fade-in-up" data-delay="200" style="gap:1.2rem;">
             <a href="contact.html" class="btn btn-primary" style="min-width:220px;">Request a Free Quote</a>
