--- a/index.html
+++ b/index.html
@@ -166,25 +166,13 @@
     <div class="hero-bg-image" aria-hidden="true"></div>
     <div class="hero-overlay" aria-hidden="true"></div>
     <div id="hero-canvas-container" style="z-index:1;position:absolute;top:0;left:0;right:0;bottom:0;pointer-events:none;"></div>
-    <div class="container hero-content" style="padding-top:8rem;padding-bottom:8rem;max-width:700px;position:relative;z-index:2;">
-        <h1 class="hero-headline-deconstruct" style="margin-bottom:1.5rem;font-size:3.5rem;line-height:1.1;font-weight:600;letter-spacing:-0.02em;"><span style="white-space:nowrap;">Your</span> <span style="white-space:nowrap;">Reputation,</span> <span style="white-space:nowrap;">Installed.</span></h1>
-        <p class="subtitle anim-fade-in-up" data-delay="100" style="margin-bottom:2.5rem;color:#fff;font-size:1.25rem;line-height:1.6;max-width:40rem;opacity:0.9;">Your trusted partner for school furniture installation in Texas. We provide certified, insured, and professional installation services that protect your brand and ensure project success for your clients.</p>
-        <div class="cta-buttons anim-fade-in-up" data-delay="200" style="display:flex;gap:1rem;">
-            <a href="contact.html" class="btn btn-primary" style="min-width:220px;padding:1rem 2rem;font-weight:500;letter-spacing:0.01em;border-radius:0.375rem;transition:all 0.2s;">Request a Free Quote</a>
-            <a href="services.html" class="btn btn-outline" style="min-width:180px;padding:1rem 2rem;font-weight:500;letter-spacing:0.01em;border-radius:0.375rem;border:1px solid rgba(255,255,255,0.3);background:transparent;color:#fff;transition:all 0.2s;">Explore Services</a>
-        </div>
-        <div class="stats-grid" style="display:grid;grid-template-columns:repeat(3,1fr);gap:2rem;margin-top:4rem;color:#fff;">
-            <div class="stat" style="opacity:0.9;">
-                <h2 style="font-size:2.5rem;font-weight:600;margin-bottom:0.5rem;">800+</h2>
-                <p style="font-size:0.875rem;opacity:0.8;">Projects Completed</p>
-            </div>
-            <div class="stat" style="opacity:0.9;">
-                <h2 style="font-size:2.5rem;font-weight:600;margin-bottom:0.5rem;">12+</h2>
-                <p style="font-size:0.875rem;opacity:0.8;">Years Experience</p>
-            </div>
-            <div class="stat" style="opacity:0.9;">
-                <h2 style="font-size:2.5rem;font-weight:600;margin-bottom:0.5rem;">99%</h2>
-                <p style="font-size:0.875rem;opacity:0.8;">On-Time Delivery</p>
+    <div class="container hero-content" style="padding-top:10rem;padding-bottom:10rem;max-width:1200px;position:relative;z-index:2;">
+        <div style="max-width:650px;">
+            <h1 class="hero-headline-deconstruct" style="margin-bottom:2rem;font-size:4.5rem;line-height:1.1;font-weight:600;letter-spacing:-0.02em;"><span style="white-space:nowrap;">Your</span> <span style="white-space:nowrap;">Reputation,</span> <span style="white-space:nowrap;">Installed.</span></h1>
+            <p class="subtitle anim-fade-in-up" data-delay="100" style="margin-bottom:3rem;color:#fff;font-size:1.5rem;line-height:1.5;max-width:40rem;opacity:0.95;">Your trusted partner for school furniture installation in Texas. We provide certified, insured, and professional installation services that protect your brand and ensure project success for your clients.</p>
+            <div class="cta-buttons anim-fade-in-up" data-delay="200" style="display:flex;gap:1.5rem;">
+                <a href="contact.html" class="btn btn-primary" style="min-width:220px;padding:1.25rem 2.5rem;font-weight:500;font-size:1.125rem;letter-spacing:0.01em;border-radius:0.375rem;transition:all 0.2s;">Request a Free Quote</a>
+                <a href="services.html" class="btn btn-outline" style="min-width:180px;padding:1.25rem 2.5rem;font-weight:500;font-size:1.125rem;letter-spacing:0.01em;border-radius:0.375rem;border:1px solid rgba(255,255,255,0.3);background:transparent;color:#fff;transition:all 0.2s;">Explore Services</a>
             </div>
         </div>
     </div>
