--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@
     <div id="hero-canvas-container" style="z-index:1;position:absolute;top:0;left:0;right:0;bottom:0;pointer-events:none;"></div>
     <div class="container hero-content">
         <div class="hero-text-container">
-            <h1 class="hero-headline-deconstruct"><span>Your</span> <span>Reputation,</span> <span>Installed.</span></h1>
+            <h1 class="hero-headline-deconstruct"><span>Your</span> <span class="accent-text">Reputation,</span> <span>Installed.</span></h1>
             <p class="subtitle anim-fade-in-up" data-delay="100">Your trusted partner for school furniture installation in Texas. We provide certified, insured, and professional installation services that protect your brand and ensure project success for your clients.</p>
             <div class="cta-buttons anim-fade-in-up" data-delay="200">
-                <a href="contact.html" class="btn btn-primary" style="min-width:220px;padding:1.25rem 2.5rem;font-weight:500;font-size:1.125rem;letter-spacing:0.01em;border-radius:0.375rem;transition:all 0.2s;">Request a Free Quote</a>
-                <a href="services.html" class="btn btn-outline" style="min-width:180px;padding:1.25rem 2.5rem;font-weight:500;font-size:1.125rem;letter-spacing:0.01em;border-radius:0.375rem;border:1px solid rgba(255,255,255,0.3);background:transparent;color:#fff;transition:all 0.2s;">Explore Services</a>
+                <a href="contact.html" class="btn btn-primary">Request a Free Quote</a>
+                <a href="services.html" class="btn btn-outline">Explore Services</a>
             </div>
         </div>
     </div>
