--- a/index.html
+++ b/index.html
@@ -179,25 +179,40 @@
 </section>
 
     <!-- Service Highlights Section -->
-    <section class="section" style="background:var(--color-gray-light);color:var(--color-black);padding:5rem 0 4rem 0;">
-      <div class="container" style="max-width:1100px;">
-        <h2 style="text-align:center;margin-bottom:2.2rem;color:#111;">Our Installation Services</h2>
-        <div class="services-grid" style="gap:2.5rem;">
-          <div class="service-card" style="background:#fff;color:#222;font-size:1.13rem;line-height:1.7;">
-            <h3 style="color:#111;font-size:1.35rem;">School Furniture Installation</h3>
-            <p style="color:#444;">Expert assembly and installation of desks, chairs, tables, lab furniture, and more for K-12 and higher education environments.</p>
+    <section class="section services-section">
+      <div class="container">
+        <div class="section-header anim-fade-in-up">
+            <h2 class="section-title">Our Core Services</h2>
+            <p class="section-subtitle">Precision, professionalism, and peace of mind, delivered.</p>
+        </div>
+        <div class="services-grid">
+          <div class="service-card anim-fade-in-up" data-delay="100">
+            <div class="service-card-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2L2 7l10 5 10-5-10-5z"></path><path d="M2 17l10 5 10-5"></path><path d="M2 12l10 5 10-5"></path></svg>
+            </div>
+            <h3 class="service-card-title">School Furniture Installation</h3>
+            <p>Expert assembly and setup of desks, chairs, and lab furniture for K-12 and higher education.</p>
           </div>
-          <div class="service-card" style="background:#fff;color:#222;font-size:1.13rem;line-height:1.7;">
-            <h3 style="color:#111;font-size:1.35rem;">FF&E Solutions</h3>
-            <p style="color:#444;">Comprehensive FF&E (Furniture, Fixtures & Equipment) installation for schools, offices, and commercial spaces, ensuring every detail is handled.</p>
+          <div class="service-card anim-fade-in-up" data-delay="200">
+            <div class="service-card-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"></path><polyline points="3.27 6.96 12 12.01 20.73 6.96"></polyline><line x1="12" y1="22.08" x2="12" y2="12"></line></svg>
+            </div>
+            <h3 class="service-card-title">FF&E Solutions</h3>
+            <p>Comprehensive installation of Furniture, Fixtures & Equipment for any educational or commercial space.</p>
           </div>
-          <div class="service-card" style="background:#fff;color:#222;font-size:1.13rem;line-height:1.7;">
-            <h3 style="color:#111;font-size:1.35rem;">Project Management</h3>
-            <p style="color:#444;">From delivery coordination to punch list completion, we manage every step for a seamless, on-time project.</p>
+          <div class="service-card anim-fade-in-up" data-delay="300">
+            <div class="service-card-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
+            </div>
+            <h3 class="service-card-title">Project Management</h3>
+            <p>From delivery coordination to punch-list completion, we manage every step for a seamless project.</p>
           </div>
-          <div class="service-card" style="background:#fff;color:#222;font-size:1.13rem;line-height:1.7;">
-            <h3 style="color:#111;font-size:1.35rem;">Statewide Coverage</h3>
-            <p style="color:#444;">Serving Dallas, Houston, Austin, San Antonio, and West Texas with a dedicated, uniformed team.</p>
+          <div class="service-card anim-fade-in-up" data-delay="400">
+            <div class="service-card-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path><circle cx="12" cy="10" r="3"></circle></svg>
+            </div>
+            <h3 class="service-card-title">Statewide Coverage</h3>
+            <p>Serving Dallas, Houston, Austin, San Antonio, and West Texas with our dedicated, professional team.</p>
           </div>
         </div>
       </div>
